--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <p style="font-size: large; float: right;" >
                 <h2 style="float: right; font-size: 30px; font-style: normal;"> Give away ends on the 09 of March 2024 </h2>
             <p style="float: right; font-size: 25px;font-style: normal;" >
-                hew dwhdewdb dueenew duwdnwd du2dwud dnewd ddwdwd wdewd <br> 
-                ew whrfqf e regewdewd ref ed ewfre gre few dref ref d ewgfre gfdffr <br>
-                xews dw fre  few fer few dew few fewdegfewdewfdewfdw dewf ewf g
+                Upgrade your tech game with our latest smartphone promotion! <br>
+                Upgrade to the phone of your dreams today! <br>
+                Visit our store or shop online to unlock a new world of possibilities <br>
+                Don't settle for anything less than extraordinary. Grab your upgrade now!
             </p > 
          
             <div class="countdown" style=" font-style: normal; float: right ;">
